zeta-code/tui/src/snapshots/zeta_tui__issues__tests__issue_groups_100x24.snap
---
source: zeta-code/tui/src/issues_tests.rs
assertion_line: 244
expression: text
---
─ Issues ───────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search keywords or #number                                                                   │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  team/repo · 0 selected · 2 loaded · Updated                                                       
    ▾ Todo (2)                                                                                      
  >   [ ] #3 first                                                                                  
      [ ] #5 second                                                                                 
    ▸ Closed (0) · expand to load
