zeta-code/tui/src/snapshots/zeta_tui__issues__tests__issue_groups_20x12.snap
---
source: zeta-code/tui/src/issues_tests.rs
assertion_line: 244
expression: text
---
─ Issues ───────────
                    
  ╭──────────────╮  
  │ Search keywor│  
  ╰──────────────╯  
  team/repo · 0 se  
    ▾ Todo (2)      
  >   [ ] #3 firs   
      [ ] #5 seco   
    ▸ Closed (0) ·
