zeta-code/tui/src/snapshots/zeta_tui__issues__tests__issue_session_starting.snap
---
source: zeta-code/tui/src/issues_tests.rs
expression: text
---
─ Issues ───────────────────────────────────────────────────────────────────────
                                                                                
   Open    Closed                                                               
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ Search keywords or #number                                               │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
  team/repo · 2 selected · 2 loaded · Updated                                   
  Starting Issue session...                                                     
  [x] #3 first                                                                  
> [x] #5 second
